mobile sizing adjusted

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button class="btn check">Aiziet!</button>
       </section>
       <section class="right">
-        <p class="message">Sāc minēt...</p>
+        <p class="message">💭 Sāc minēt...</p>
         <p class="label-score">💯 Rezultāts: <span class="score">20</span></p>
         <p class="label-highscore">
           🥇 Rekords: <span class="highscore">0</span>
