HTML structure changed, CSS adjustments

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
   </head>
   <body>
     <header>
+      <div class="left">
+        <button class="btn again">Vēlreiz!</button>
+      </div>
+      <div class="right">
+        <p class="between">no 1 līdz 20</p>
+      </div>
       <h1>Uzmini ciparu!</h1>
-      <p class="between">(No 1 līdz 20)</p>
-      <button class="btn again">Vēlreiz!</button>
       <div class="number">?</div>
     </header>
     <main>
